--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,7 +1,19 @@
 @import "@styles/mixins.module.scss";
+@import "@styles/variables.module.scss";
 
 .btn {
-  @include btn(30px, 30px, #fff, 0px);
+  @include btn(unset, unset, $primary_color, 3px);
+  color: $white_color;
+  padding: 13px 45px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.25s ease;
+
+  &:hover {
+    background-color: transparent;
+    color: $black_color;
+    border: 1px solid $primary_color;
+  }
 }
 
 .btn2 {
