--- a/src/assets/styles/_variables.module.scss
+++ b/src/assets/styles/_variables.module.scss
@@ -1,6 +1,7 @@
 $primary_color: #333;
 $secondary_color: #888;
 $third_color: #555;
+$four_color: #222;
 $white_color: #fff;
 $black_color: #000;
 $sub_color: #404040;
