--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,13 +1,17 @@
 @import "@styles/mixins.module.scss";
 @import "@styles/variables.module.scss";
 
-.btn {
-  @include btn(unset, unset, $primary_color, 3px);
-  color: $white_color;
+.btn,
+.btn2 {
   padding: 13px 45px;
   font-size: 14px;
   cursor: pointer;
   transition: all 0.25s ease;
+}
+
+.btn {
+  @include btn(unset, unset, $primary_color, 3px);
+  color: $white_color;
 
   &:hover {
     background-color: transparent;
@@ -17,5 +21,13 @@
 }
 
 .btn2 {
-  @include btn(44px, 44px, #fff, 50%);
+  @include btn(unset, unset, $white_color, 3px);
+  color: $black_color;
+  font-weight: 300;
+  border: 1px solid $primary_color;
+
+  &:hover {
+    background-color: $four_color;
+    color: $white_color;
+  }
 }
