--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -9,6 +9,10 @@
   transition: all 0.25s ease;
 }
 
+.shrink {
+  width: 100% !important;
+}
+
 .btn {
   @include btn(unset, unset, $primary_color, 3px);
   color: $white_color;
