--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -63,6 +63,7 @@
 .boxIcon2 {
   @include radius_common(50%);
   @include flex_box_custom(center, center, 0px);
+  cursor: pointer;
 
   img {
     cursor: pointer;
