--- a/src/components/SidebarContent/components/ProductItem/styles.module.scss
+++ b/src/components/SidebarContent/components/ProductItem/styles.module.scss
@@ -46,5 +46,12 @@
   .priceStyle {
     font-size: 14px;
     color: $four_color;
+    margin-bottom: 7px;
+  }
+
+  .size {
+    color: #9e9e9e;
+    margin: 7px 0 10px 0;
+    font-size: 14px;
   }
 }
