--- a/src/components/SidebarContent/Heart/styles.module.scss
+++ b/src/components/SidebarContent/Heart/styles.module.scss
@@ -1,2 +1,16 @@
 @import "@styles/mixins.module.scss";
 @import "@styles/variables.module.scss";
+
+.container {
+  padding: 30px 20px 0 20px;
+
+  .boxButton {
+    @include flex_box_custom(center, center, 8px);
+
+    flex-direction: column;
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
+    right: 10px;
+  }
+}
