--- a/src/components/ProductItem/styles.module.scss
+++ b/src/components/ProductItem/styles.module.scss
@@ -140,5 +140,17 @@
   .boxBtn {
     @include flex_box_custom(center, center, 0);
     margin: 10px 0;
+
+    .rotate {
+      animation: loading 1s linear infinite;
+      @keyframes loading {
+        0% {
+          transform: rotate(0);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    }
   }
 }
