--- a/src/components/SidebarContent/Cart/styles.module.scss
+++ b/src/components/SidebarContent/Cart/styles.module.scss
@@ -2,13 +2,31 @@
 @import "@styles/variables.module.scss";
 
 .container {
+  position: relative;
   padding: 30px 20px 0 20px;
+  height: 100vh;
 
   .containerButton {
     position: absolute;
     bottom: 20px;
     right: 10px;
     left: 10px;
+  }
+
+  .containerLoading {
+    @include flex_box_custom(center, center, 0);
+
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // width: 100%;
+    // height: 100%;
+    // background-color: rgba(255, 255, 255, 0.4);
+  }
+
+  .containerCart {
+    max-height: 450px;
+    overflow: auto;
   }
 
   .boxHeading {
