--- a/src/components/SidebarContent/components/ProductItem/styles.module.scss
+++ b/src/components/SidebarContent/components/ProductItem/styles.module.scss
@@ -2,7 +2,7 @@
 @import "@styles/variables.module.scss";
 
 .container {
-  @include flex_box_custom(center, start, 15px);
+  @include flex_box_custom(start, start, 15px);
   position: relative;
   padding: 15px 5px;
   transition: all 0.3s ease;
@@ -53,5 +53,16 @@
     color: #9e9e9e;
     margin: 7px 0 10px 0;
     font-size: 14px;
+  }
+
+  .overlayLoading {
+    @include flex_box_custom(center, center, 0);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
   }
 }
