--- a/src/pages/OurShop/styles.module.scss
+++ b/src/pages/OurShop/styles.module.scss
@@ -84,6 +84,7 @@
 
   .containerProduct {
     padding-top: 40px;
+    min-height: 800px;
 
     &.grid {
       @include flex_box_custom(space-between, start, 12px);
@@ -99,5 +100,17 @@
   .boxBtn {
     @include flex_box_custom(center, center, 0);
     margin-top: 40px;
+  }
+}
+
+.rotate {
+  animation: loading 1s linear infinite;
+  @keyframes loading {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
